syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTBip47Context";
option optimize_for = LITE_RUNTIME;

import public "Bip47Chain.proto";

message Bip47Context {
    optional uint32 version = 1;
    optional string paymentcode = 2;
    repeated Bip47Chain chain = 3;
}
